2009-01-31  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_arm_at91_eb40a.cdl: update compiler flags for gcc 4.x

2009-01-24  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_arm_at91_eb40a.cdl: switch from arm-elf-gcc to
	arm-eabi-gcc. Remove -mno-short-load-words.

2004-09-16  Andrea Michelotti <amichelotti@atmel.com>

	* include/hal_platform_ints.h: When CYGHWR_HAL_ARM_AT91_FIQ is defined 
	  CYGNUM_HAL_ISR_MIN is equal to zero.
	
2004-08-30  Thomas Koeller <thomas.koeller@baslerweb.com>

	* cdl//hal_arm_at91_eb42.cdl: Undid last change. These
	options are not really common among all platforms.

2004-02-12  Jani Monoses <jani@iv.ro>

	* cdl/hal_arm_at91_eb40a.cdl: Move configuration options 
	common to all AT91 EB boards up to AT91 variant .cdl.
	
2003-12-16  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_ROMRAM.ecm: 
	CYGNUM_FLASH_WORKSPACE_SIZE is no longer used.

2003-09-30 Jani Monoses <jani@iv.ro> 

	* cdl/hal_arm_at91_eb40a.cdl: Interfaces are already implemented by
	AT91 variant .cdl, do not duplicate them here.
	
2003-07-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/hal_platform_ints.h (HAL_PLATFORM_RESET): Actually use
	hal_at91_reset_cpu().

2003-06-11  Oyvind Harboe  <oyvind.harboe@zylin.com>
	
	* src/eb40a_misc.c:
	LED routines were using the wrong bits.
	
	* include/plf_io.h
	LED defines were using the wrong bits
	Added defines for the EB40a board push buttons
	
2003-05-12  Nick Garnett  <nickg@balti.calivar.com>

	* src/eb40a_misc.c:
	Renamed and changed behaviour of led routines. They now all have
	hal_at91_ in front to prevent namespace pollution, and all now
	just take a simple 8 bit mask and adapt to the specific pin
	assignments internally.

	* cdl/hal_arm_at91_eb40a.cdl: Added requirement for
	CYGHWR_HAL_ARM_AT91 == "R40008" to customize the variant HAL to
	the device on this board.

	* include/hal_platform_setup.h: Added _led_init and _led macros to
	initialize and work board LEDs. Ensured that LEDs work even in RAM
	startup.
